sumo/tests/sumo/errors/traffic_lights/testsuite.sumo
# The following tests are based on the network from
#  tests\netconvert\import\XML\connections\cross3l_no_tls_turnarounds

# ok, initial network's program is right
initial_ok

# initial network's program has a false phase size (one too large)
initial_wrong_phase_size1

# initial network's program has a false phase size (one too few)
initial_wrong_phase_size2

# ok, loaded program is right
loaded_ok

# loaded program has a false phase size (one too large)
loaded_wrong_phase_size1

# loaded program has a false phase size (one too large)
loaded_wrong_phase_size2



